# finance-api

./: .dockerignore  .env.example  .gitignore  README.md  bandit-report.json  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 185e69f02486_integrate_subscriptions_privacy_finance_.py  20250901_210000_change_primary_keys_to_uuid.py
docker/: Dockerfile.dev  Dockerfile.prod  nginx.conf
docs/: README.md  ci-enhancement-plan.md
docs/api/: authentication.md  finance.md  llm.md  privacy.md  subscriptions.md
docs/examples/: api-examples.md  subscription-tiers.md
docs/setup/: development.md  production.md
src/: main.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/core/: celery_app.py  config.py  database.py  encryption.py  exceptions.py  metrics.py  security.py
src/finance/: base.py  dependencies.py  models.py  router.py  schemas.py
src/finance/tools/: portfolio_analyzer.py
src/llm/: clients.py  dependencies.py  models.py  router.py  schemas.py  services.py
src/privacy/: dependencies.py  models.py  router.py  schemas.py  services.py  tasks.py
src/shared/: health.py
src/subscriptions/: dependencies.py  models.py  router.py  schemas.py  services.py  tasks.py  tiers.py
src/users/: dependencies.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/test_auth/: test_auth.py
tests/test_finance/: test_multi_tenancy.py  test_subscription_integration.py
tests/test_llm/: test_llm_integration.py
tests/test_privacy/: test_gdpr_compliance.py
tests/test_subscriptions/: test_subscription_lifecycle.py  test_usage_limits.py
tests/test_users/: test_users.py
